Bug 115383 - writer can't open File from CD-ROM
Summary: writer can't open File from CD-ROM
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All Linux (All)
: high normal
Assignee: Aron Budea
URL:
Whiteboard: target:6.0.2 target:6.1.0 target:5.4.6
Keywords: bibisected, bisected, regression
: 113024 (view as bug list)
Depends on:
Blocks: File-Lock
  Show dependency treegraph
 
Reported: 2018-02-01 16:27 UTC by JohnML
Modified: 2018-09-13 18:36 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JohnML 2018-02-01 16:27:45 UTC
Description:
Info:
libreoffice --writer --version = LibreOffice 5.4.4.2 40m0(Build:2)

OS:
Manjaro Linux 64bit, XFCE

Linux manjaro 4.14.15-1-MANJARO #1 SMP PREEMPT Wed Jan 24 13:13:39 UTC 2018 x86_64 GNU/Linux

reproduce:
try to open a doc or spreadsheet from CD-ROM -> splash screen, nothing happens, nor error message


Steps to Reproduce:
1.open file from CD-ROM
2.
3.

Actual Results:  
no files will be opened

Expected Results:
open the file


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
double click alos won't work


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.119 Safari/537.36
Comment 1 Buovjaga 2018-02-17 19:18:54 UTC
(In reply to JohnML from comment #0)
> OpenGL enabled: Yes

Might be a stretch, but if OpenGL is really enabled, you could try if disabling it helps: Tools - Options - LibreOffice - View - Use OpenGL for all rendering
Comment 2 JohnML 2018-02-18 15:27:58 UTC
... disabled OpenGL:

New error message in German:

Allgemeiner Ein-/Ausgabefehler beim Zugriff auf /run/media/john1/20170220-yakkety-amd64/GPL.
Comment 3 Buovjaga 2018-02-18 18:14:01 UTC
(In reply to JohnML from comment #2)
> ... disabled OpenGL:
> 
> New error message in German:
> 
> Allgemeiner Ein-/Ausgabefehler beim Zugriff auf
> /run/media/john1/20170220-yakkety-amd64/GPL.

So are you able to open files on the CD-ROM with other applications, like with a text editor?
Comment 4 JohnML 2018-02-19 16:04:08 UTC
(In reply to Buovjaga from comment #3)
> (In reply to JohnML from comment #2)
> > ... disabled OpenGL:
> > 
> > New error message in German:
> > 
> > Allgemeiner Ein-/Ausgabefehler beim Zugriff auf
> > /run/media/john1/20170220-yakkety-amd64/GPL.
> 
> So are you able to open files on the CD-ROM with other applications, like
> with a text editor?

yes, i can open these files with geany editor for example!
Comment 5 JohnML 2018-02-19 16:09:31 UTC
sorry, it's a different version of Libreoffice:

Version: 6.0.1.1
Build-ID: 6.0.1-1
CPU-Threads: 4; BS: Linux 4.14; UI-Render: Standard; VCL: gtk3; 
Gebietsschema: de-DE (de_DE.utf8); Calc: group

How to change the settings of this post, above?
Comment 6 JohnML 2018-02-19 16:11:38 UTC
.. seems to be changed to the correct LO Verion!
Comment 7 Buovjaga 2018-02-19 17:16:53 UTC
(In reply to JohnML from comment #5)
> sorry, it's a different version of Libreoffice:
> 
> Version: 6.0.1.1
> Build-ID: 6.0.1-1
> CPU-Threads: 4; BS: Linux 4.14; UI-Render: Standard; VCL: gtk3; 
> Gebietsschema: de-DE (de_DE.utf8); Calc: group

Hmm, do you mean you did not see this with 5.4.4? Did 5.4.4 work correctly and the problem began with 6.0.1?
Comment 8 JohnML 2018-02-19 17:44:03 UTC
if i remember correct i allways had Version 6.

Just tested again: From Libreoffice open File -> error.
The same error as if i try with file as commandline argument.

You can't reproduce this?
Comment 9 JohnML 2018-02-19 17:51:33 UTC
AV error with this from CD-ROM

 libreoffice --writer  -o '/run/media/john1/20170220-yakkety-amd64/Clonezilla-Live-Version'
Comment 10 Buovjaga 2018-02-19 19:25:28 UTC
Ok, now I tried with a CD that had a text file and sure enough: 6.0 cannot open it, but 3.6 can.

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)

Arch Linux 64-bit
Version: 6.0.1.1
Build ID: 6.0.1-1
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: c902cbc7dc5294ab721a9aef3a152aa243d00011
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on February 17th 2018
Comment 11 Aron Budea 2018-02-19 20:57:04 UTC
In Windows there is an error message:
"The lock file could not be created for exclusive access by LibreOffice, due to missing permission to create a lock file on that location or lack of free space."

With choices: Open Read-Only / Cancel

Possibly since the fix to bug 106942.
Comment 12 Aron Budea 2018-02-19 21:58:00 UTC
In 6.0.1.1 / Ubuntu 17.10 there's the following error:
"General input/output error while accessing"

Bibisected to the following commit using repo bibisect-linux-64-5.4. Adding Cc: to Chris Sherlock.

Chris, I'm not sure what the rationale is behind this mixup, and the original intention of swapping the two is unclear as well, as they are and were in the same order in file.h:
E_SPIPE        = osl_File_E_ROFS,
E_ROFS         = osl_File_E_SPIPE, 

https://cgit.freedesktop.org/libreoffice/core/commit/?id=a9739f2dec197793fa9400dd95be49494dc85264
author		Chris Sherlock <chris.sherlock79@gmail.com>	2017-05-14 18:56:19 +1000
committer	Chris Sherlock <chris.sherlock79@gmail.com>	2017-05-14 13:52:21 +0200

osl: document file.hxx, swap order of E_ROFS and E_SPIPE to match file.h
Comment 13 JohnML 2018-02-20 07:25:50 UTC
... this issue seems to be solved soon.

Thanks to Buovjaga and Aron Budea!

Funny: just wanted to post my "wild guess": lock file can't be written to ro CD-ROM :-)
Comment 14 Lee Hodges 2018-02-21 20:01:18 UTC
Bug also in Fedora 27 4.15.3-3.fc27 Libreoffice 5.4.5.1-1.fc27. Fails to open an impress file with I/O error from a CDrom. File can be opened with xarchiver 0.5.4. I have an older machine that has Fedora 3.19.8-100.fc20 and Libreoffice 4.2.8.2.fc20 on it and the impress file opens just fine in read only mode which is expected.
Comment 15 Commit Notification 2018-02-22 11:48:57 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aafbeb29074c9e520a755f5582a774f9c812049b&h=libreoffice-6-0

tdf#115383: revert mixup of E_ROFS and E_SPIPE in file.hxx

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2018-02-22 11:49:07 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2219f0f6f85316d05231130c89613b98e7fd2cf5

tdf#115383: revert mixup of E_ROFS and E_SPIPE in file.hxx

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Aron Budea 2018-02-22 13:22:44 UTC
Fixed in master and 6.0, backport to 5.4 is in gerrit: https://gerrit.libreoffice.org/#/c/50171/

Thanks, Michael!
Comment 18 Commit Notification 2018-02-22 13:55:53 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8bb752d21e25a1ba9b61e1197002e6d8c1746a5&h=libreoffice-5-4

tdf#115383: revert mixup of E_ROFS and E_SPIPE in file.hxx

It will be available in 5.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Aron Budea 2018-02-23 16:30:44 UTC
*** Bug 113024 has been marked as a duplicate of this bug. ***
Comment 20 Aron Budea 2018-03-09 21:04:21 UTC
*** Bug 116323 has been marked as a duplicate of this bug. ***
Comment 21 Julien Nabet 2018-03-10 07:42:06 UTC Comment hidden (obsolete)
Comment 22 whynot 2018-09-13 15:22:28 UTC
I have had a similar error for years and years. In my case I have an online share mounted via SSHFS. The shared drive in on the server is mounted read-only.

I am on LO 6.0.6 (linux) and I still get this error every single time. 
I realize that the bug report was written for a CD-ROM, but I am nearly certain that the underlying issue is the same: lacking write permission to the file and/or the folder it is in. 

Isn't there a generic way of fixing it, such as checking the permission status of the file being opened or of the folder the file is sitting in?
Comment 23 Aron Budea 2018-09-13 15:33:46 UTC
The issue described in this report has been fixed. It's certainly possible that there are different, seemingly related issues, for such bugs please open a new bug report.
Comment 24 Buovjaga 2018-09-13 18:36:15 UTC
(In reply to whynot from comment #22)
> I have had a similar error for years and years. In my case I have an online
> share mounted via SSHFS. The shared drive in on the server is mounted
> read-only.
> 
> I am on LO 6.0.6 (linux) and I still get this error every single time. 
> I realize that the bug report was written for a CD-ROM, but I am nearly
> certain that the underlying issue is the same: lacking write permission to
> the file and/or the folder it is in. 
> 
> Isn't there a generic way of fixing it, such as checking the permission
> status of the file being opened or of the folder the file is sitting in?

There is bug 36827 for SSHFS that sounds like your issue.