tdf#115383: revert mixup of E_ROFS and E_SPIPE in file.hxx

Regression from a9739f2dec197793fa9400dd95be49494dc85264

Change-Id: I1b55b0201888a63bd2439be8c0421f450d609018
Reviewed-on: https://gerrit.libreoffice.org/50105
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>